# gin

./: .editorconfig  .gitignore  .gitlab-ci.yml  Dockerfile  MANIFEST.in  Pipfile  README.md  meson.build  meson_post_install.py  setup.py  update_image.sh
.github/workflows/: image.yml  mimelint.yml  python.yml  run.yml  test.yml  xmllint.yml
data/: com.belmoussaoui.Gin.mime.xml  gin.dtd  meson.build
docs/: index.html  styles.css
gin/: __init__.py  app.py  cli.py  config.py  container.py  errors.py  helper.py  parser.py  project.py  template.py
gin/dependencies/: __init__.py  autotools.py  cmake.py  dependency.py  helper.py  meson.py  system.py
gin/sources/: __init__.py  archive.py  dir.py  file.py  git.py  patch.py  source.py
gin/templates/: PKGBUILD.in  __init__.py  app.wxs.in  defines.wxi.in  mingw.spec.in
src/: parser.py  project.py  source.py
src/buildsystems/: __init__.py  buildsystem.py  cmake.py  meson.py
src/dependencies/: __init__.py  dependency.py  meson.py
src/sources/: file.py  git.py  source.py
tests/: com.belmoussaoui.GinTest.gin.xml  manifest.xml  org.gnome.design.Palette.gin.xml  org.gnome.zbrown.Med.gin.xml  test_dependency.py  test_parser.py  test_source.py
